Kapper Beschrijving Edit
App werkt maar laad de string-array niet in textview

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,7 +19,7 @@
 		<item>Kom bij Fleur voor \'n nieuwe Kleur</item>
 	</string-array>
 
-	<string-array name="beschrijving">
+	<string-array name="kapperBeschrijving">
 		<item>Dames en Herenkapper centrale ligging Utrecht.
 				Kinderen tot 8 jaar worden bij ons gratis geknipt.
 				Dus neem de kleintjes gerust mee!</item>
