--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,29 @@
 <resources>
 	<string name="app_name">RecyclerView</string>
 
+	<string name="static_Beschrijving">Over Ons</string>
+	<string name="Beschrijving">Is het tijd voor een knipbeurt? Bij ons kunt u terecht.
+		Als u op een vast tijdstip geholpen wil worden raden wij u aan een afspraak te maken via deze app.
+		</string>
+
+	<string name="kapper_afbeelding">Kapper Afbeelding</string>
+
+	<string name="kapperRating">(209)</string>
+	<string name="rating_s1">rating_S1</string>
+	<string name="rating_s2">rating_S2</string>
+	<string name="rating_s3">rating_S3</string>
+	<string name="rating_s4">rating_S4</string>
+	<string name="rating_s5">rating_S5</string>
+
+	<string name="kalender_button">kalender</string>
+	<string name="static_AfspraakText">Maak een afspraak</string>
+
+	<string name="static_tarieflijst">Tarieflijst</string>
+	<string name="static_TariefTest">TextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextView TextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextView TextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextView TextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextView TextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextView TextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextView TextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextView TextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextView TextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextView TextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextView TextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextView TextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextView TextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextView TextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextView TextViewTextTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewText ViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewText ViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewText ViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewText ViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewText ViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewText ViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewText ViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewText ViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewText ViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewText ViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewText ViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewText ViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewText ViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewText ViewTextViewView</string>
+	<string name="col1">Behandeling</string>
+	<string name="col2">Prijs</string>
+	<string name="static_OverigeInfo">Overige Informatie</string>
+
 	<string-array name="kapperNaam">
 		<item>Schaar \'t Haar</item>
 		<item>Hair Yo!</item>
