--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -93,9 +93,11 @@
 				<string name="afspraak_td_2">11:00</string>
 				<string name="afspraak_ps_1">2</string>
 				<string name="afspraak_ps_2">2</string>
+	<string name="Afspraken_kappernaam">Snip Snip</string>
+	<string name="Afspraken_Kapper_Slogan">Kom gezellig langs</string>
 
 
-		<!-- DYNAMIC STRING ARRAYS -->
+	<!-- DYNAMIC STRING ARRAYS -->
 				<string-array name="kapperNaam">
 					<item>Schaar \'t Haar</item>
 					<item>Hair Yo!</item>
