Fixed: (hardcoded) dynamic "Over Ons"

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -133,7 +133,7 @@
 							neem gerust een kop koffie in onze lounch.</item>
 					<item>Bent u toe aan een nieuwe stijl? Kom gezellig bij ons binnen om te browsen of
 							om een van onze experts raad te plegen.</item>
-					<item>doet het toch niet. blablabla</item>
+					<item>Wegens een zieke in ons team, werken wij momenteel enkel op afspraak.</item>
 				</string-array>
 
 </resources>
